--- a/playbooks/roles/info_common/tasks/kernel-config.yaml
+++ b/playbooks/roles/info_common/tasks/kernel-config.yaml
@@ -1,17 +1,6 @@
 ---
-- name: Get Linux kernel config filename
-  changed_when: false
-  ansible.builtin.shell:
-    cmd: >-
-      ls /boot/config-$(uname -r)
-  register: _config_fname
-
 - name: Download Linux kernel config
-  delegate_to: localhost
   throttle: "{{ concurrent_local_jobs }}"
-  ansible.posix.synchronize:
-    mode: pull
-    src: "{{ _config_fname.stdout }}"
+  ansible.builtin.fetch:
+    src: "/boot/config-{{ ansible_facts.kernel }}"
     dest: "{{ tmp_dir }}/kconfig/{{ inventory_hostname }}.config"
-    use_ssh_args: true
-    verify_host: true
