--- a/playbooks/roles/info_common/tasks/main.yaml
+++ b/playbooks/roles/info_common/tasks/main.yaml
@@ -5,6 +5,8 @@
       append_newline: true
       create: true
       mode: "0644"
+    ansible.builtin.fetch:
+      flat: true
     ansible.builtin.lineinfile:
       create: true
       firstmatch: true
