suppress grep output if return code is sufficient

--- a/playbooks/roles/setup_autoupdate/tasks/auto-update.yaml
+++ b/playbooks/roles/setup_autoupdate/tasks/auto-update.yaml
@@ -60,8 +60,8 @@
     hour: "{{ timer_hour1 }},{{ timer_hour2 }}"
     minute: "{{ 30 + 10 | random(seed=seed_host) }}"
     job: >-
-      if grep 'System restart required' /var/run/reboot-required 2>/dev/null; then
-      pgrep -af 'sshd:' | grep -v '/usr/sbin/sshd' || reboot;
+      if grep -q 'System restart required' /var/run/reboot-required 2>/dev/null; then
+      pgrep -af 'sshd:' | grep -q -v '/usr/sbin/sshd' || reboot;
       fi
 
 # 2x per day between :40 and :49
@@ -71,6 +71,6 @@
     hour: "{{ timer_hour1 }},{{ timer_hour2 }}"
     minute: "{{ 40 + 10 | random(seed=seed_host) }}"
     job: >-
-      if needrestart -r l -b | grep -e 'NEEDRESTART-KSTA: 2' -e 'NEEDRESTART-KSTA: 3' -e 'NEEDRESTART-SVC:'; then
-      pgrep -af 'sshd:' | grep -v '/usr/sbin/sshd' || reboot;
+      if needrestart -r l -b | grep -q -e 'NEEDRESTART-KSTA: 2' -e 'NEEDRESTART-KSTA: 3' -e 'NEEDRESTART-SVC:'; then
+      pgrep -af 'sshd:' | grep -q -v '/usr/sbin/sshd' || reboot;
       fi
