throttle github_connections

--- a/playbooks/roles/setup_common/tasks/kernel-src.yaml
+++ b/playbooks/roles/setup_common/tasks/kernel-src.yaml
@@ -41,6 +41,7 @@
         creates: /swapfile
 
     - name: Init or update Linux repo
+      throttle: "{{ github_connections }}"
       retries: 3
       ansible.builtin.git:
         repo: "{{ kernel_git_repo_url }}"
