--- a/playbooks/roles/snapshot/tasks/snapshot.yaml
+++ b/playbooks/roles/snapshot/tasks/snapshot.yaml
@@ -8,3 +8,13 @@
   ansible.builtin.command:
     cmd: >-
       hcloud --quiet --poll-interval 30s server create-image --type snapshot --description='{{ _description }}' {{ inventory_hostname }}
+
+- name: Delete image
+  delegate_to: localhost
+  throttle: "{{ concurrent_local_jobs }}"
+  changed_when: true
+  vars:
+    _description: "{{ inventory_hostname | regex_replace('^hi', '') }}"
+  ansible.builtin.command:
+    cmd: >-
+      hcloud --quiet --poll-interval 30s server delete {{ inventory_hostname }}
