--- a/playbooks/roles/setup_common/tasks/main.yaml
+++ b/playbooks/roles/setup_common/tasks/main.yaml
@@ -134,7 +134,7 @@
     - name: Catch async kernel build job
       tags:
         - kernel-src
-      when: _kernel_build.changed
+      when: _kernel_build is defined and _kernel_build.changed
       block:
         - name: Wait till kernel build finished
           when: not fire_and_forget | bool
@@ -151,7 +151,7 @@
             jid: "{{ _kernel_build.ansible_job_id }}"
             mode: cleanup
 
-    - name: Explicit check if reboot is needed
+    - name: Check if a reboot is needed
       ansible.builtin.import_tasks: reboot.yaml
       tags:
         - reboot
