--- a/playbooks/roles/poweron/tasks/poweron.yaml
+++ b/playbooks/roles/poweron/tasks/poweron.yaml
@@ -13,12 +13,12 @@
       throttle: "{{ concurrent_local_jobs }}"
       changed_when: true
       ansible.builtin.command:
-        cmd: timeout 1m hcloud --quiet --poll-interval 10s server poweron {{ inventory_hostname }}
+        cmd: timeout --signal=15 --kill-after=1m 1m hcloud --quiet --poll-interval 10s server poweron {{ inventory_hostname }}
 
     - name: Network ping
       delegate_to: localhost
       throttle: "{{ concurrent_local_jobs }}"
-      changed_when: _poweron.rc == 0
+      changed_when: true
       ansible.builtin.shell:
         cmd: |-
           i=20
@@ -31,8 +31,6 @@
           done
           exit 2
         executable: /bin/bash
-      register: _poweron
 
     - name: Verify via SSH ping
-      when: _poweron.changed
       ansible.builtin.ping:
