donditionally delete instance in an own task by a dedicated tag

--- a/playbooks/roles/snapshot/tasks/main.yaml
+++ b/playbooks/roles/snapshot/tasks/main.yaml
@@ -11,3 +11,8 @@
   ansible.builtin.import_tasks: snapshot.yaml
   tags:
     - snapshot
+
+- name: Delete instance
+  ansible.builtin.import_tasks: delete-instance.yaml
+  tags:
+    - delete-instance
