move "issue" and "artefact" to info_setup role

--- a/playbooks/roles/info_setup/tasks/_issue.yaml
+++ b/playbooks/roles/info_setup/tasks/_issue.yaml
@@ -15,7 +15,7 @@
       changed_when: false
       ansible.builtin.shell:
         cmd: |-
-          journalctl --since "{{ log_system_since }}" --quiet |
+          journalctl --since "{{ issue_since }}" --quiet |
             grep -A 1000 -F "{{ item }}" |
             while grep -F -e "{{ item }}" -e " kernel: "; do
               : run till the first non-matching line
