--- a/playbooks/roles/snapshot_cleanup/tasks/housekeeping.yaml
+++ b/playbooks/roles/snapshot_cleanup/tasks/housekeeping.yaml
@@ -5,8 +5,8 @@
   failed_when: _result.stderr or _result.rc != 0
   ansible.builtin.shell:
     cmd: |-
-      hcloud --quiet --poll-interval 10s image list --type snapshot --output noheader --output columns=id,description |
+      hcloud --quiet image list --type snapshot --output noheader --output columns=id,description |
         sort -r |
         awk 'x[$2]++ { print $1 }' |
-        xargs -r hcloud --poll-interval 10s image delete
+        xargs -r hcloud --poll-interval 12s image delete
   register: _result
