--- a/playbooks/roles/info_common/tasks/log-system.yaml
+++ b/playbooks/roles/info_common/tasks/log-system.yaml
@@ -7,7 +7,8 @@
         grep -v -F 'Speculative Return Stack Overflow: WARNING:' |
         grep -F \
           -e 'BUG at' -e 'BUG:' -e 'WARNING:' -e '-----------[ cut here ]------------' \
-          -e 'invoked oom-killer' -e 'status=9/KILL' -e '.service: Failed' |
+          -e 'invoked oom-killer' -e 'status=9/KILL' -e '.service: Failed' \
+          -e 'Call Trace:' -e 'Oops:' |
         tail -n {{ log_lines }}
   register: _result
 
