--- a/playbooks/roles/setup_tor/defaults/main.yaml
+++ b/playbooks/roles/setup_tor/defaults/main.yaml
@@ -3,11 +3,11 @@ tor_build_from_source: true
 
 tor_git_version: main
 tor_patches: []
-tor_prune_git_repo: false
+tor_remove_git_repo: false
 
 lyrebird_git_version: main
 lyrebird_patches: []
-lyrebird_prune_git_repo: false
+lyrebird_remove_git_repo: false
 
 tor_debian_target: "" # e.g. tor-nightly-main-bookworm, default is stable
 
