--- a/playbooks/roles/setup_tor/tasks/ddos-firewall.yaml
+++ b/playbooks/roles/setup_tor/tasks/ddos-firewall.yaml
@@ -6,6 +6,7 @@
       - jq
 
 - name: Download DDoS solution
+  throttle: 40
   retries: 3
   ansible.builtin.get_url:
     url: "https://github.com/toralf/torutils/raw/main/{{ item }}"
