--- a/playbooks/roles/setup_common/tasks/kernel-src.yaml
+++ b/playbooks/roles/setup_common/tasks/kernel-src.yaml
@@ -15,23 +15,19 @@
       - libssl-dev
       - lz4
 
-- name: Stats of make.log
-  ansible.builtin.stat:
-    path: /root/make.log
-  register: _make_log
+- name: Check for kernel build process
+  community.general.pids:
+    name: build-kernel.sh
+  register: _build_is_running
 
 - name: Self-compiled kernel
-  when: not _make_log.stat.exists or _age | int > 60
-  vars:
-    _age: "{{ now(utc=true, fmt='%s') | float - _make_log.stat.atime }}"
+  when: not _build_is_running.pids
   block:
     - name: Work on "{{ _repo_dir }}"
       vars:
-        _git_connections: 40
         _git_repo_url: "{{ kernel_git_repo_url }}"
         _git_version: "{{ kernel_git_version }}"
         _git_patches: "{{ kernel_git_patches }}"
-        _remove_git_repo: "{{ kernel_remove_git_repo }}"
         _repo_dir: /root/linux
       ansible.builtin.include_tasks: "{{ playbook_dir }}/roles/setup_common/tasks/_git.yaml"
 
@@ -130,14 +126,9 @@
 
           yes '' | make oldconfig >/dev/null
 
-          # if the current running kernel doesn't contain the commit-id of HEAD, then set the Ansible task to "changed"
-          if ! uname -r | grep -q "$(git rev-parse --verify HEAD | cut -c -12)"; then
-            exit 123
-          fi
-
-          # if files do differ, then mark Ansible task as being changed
+          # mark Ansible task as being changed, if files do differ
           after=$(md5sum .config)
-          if [[ ! $before == $after ]]; then
+          if [[ $before != $after ]]; then
             exit 123
           fi
 
@@ -165,13 +156,30 @@
         mode: "0744"
       register: _kernel_build_script
 
+    - name: Create swap file for small RAM
+      when: ansible_facts.memtotal_mb < 2048
+      ansible.builtin.shell:
+        cmd: |-
+          set -euf
+
+          fallocate -l 2G /swapfile
+          chmod 600 /swapfile
+          mkswap /swapfile
+          if ! grep -q "^/swapfile " /etc/fstab; then
+            echo "/swapfile  none  swap  defaults  0  0" >>/etc/fstab
+          fi
+          swapon /swapfile
+        creates: /swapfile
+
     - name: Build Linux
       async: "{{ (75 * 60) | int }}"
       poll: 0
-      when: _git_repo.changed or _git_repo_patched.changed or _kernel_configured.changed or _kernel_build_script.changed
+      when: _git_repo_changed or _kernel_configured.changed or _kernel_build_script.changed or not _is_latest
       changed_when: true
       vars:
-        _j: "{{ (ansible_facts.memtotal_mb < 1536) | ternary(1, ansible_facts.processor_vcpus) }}"
+        _is_latest: "{{ ansible_facts.kernel is search(_git_head.after[:12]) }}"
+        _max: "{{ (ansible_facts.memtotal_mb < 2048) | ternary(1, (ansible_facts.memtotal_mb / 2048 + 1) | int) }}"
+        _j: "{{ (_max | int < ansible_facts.processor_vcpus) | ternary(_max, ansible_facts.processor_vcpus) }}"
       ansible.builtin.shell: # noqa: command-instead-of-shell
         cmd: |-
           {{ fire_and_forget | bool | ternary('nohup /root/build-kernel.sh ' ~ _j ~ ' reboot &', '/root/build-kernel.sh ' ~ _j) }}
