--- a/playbooks/roles/setup_tor/tasks/torutils.yaml
+++ b/playbooks/roles/setup_tor/tasks/torutils.yaml
@@ -1,9 +1,8 @@
 ---
 - name: Work on "{{ _repo_dir }}"
   vars:
-    _git_connections: 20
     _git_repo_url: https://github.com/torproject/stem.git
-    _git_version: "{{ stem_git_version }}"
+    _git_version: master
     _git_patches: []
     _remove_git_repo: false
     _repo_dir: /root/stem
